Update and rename navBar.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
 <!--NOTES -->
-<!-- ctrl-n = Create New File -->
+<!-- ctrl-n = Create a New File -->
 <!-- ctrl-a = Select all -->
 <!-- ctrl-c = Copy -->
 <!-- ctrl-v = Paste -->
 <!-- ctrl-t = switch tab -->
 <!-- ctrl-z = UNDO -->
 <!-- ctrl-s = Save the File -->
-<!-- ctrl-shift-d = auto replicate the line above -->
-<!-- hold ctrl = curser in multiple spots -->
+<!-- ctrl-shift-d = replicate the line above -->
+<!-- hold ctrl = cursor in multiple spots -->
 <html>
   <head>
     <title>Restaurant</title>
     <link rel = "stylesheet" href = "navStyle.css">
   </head>
   <body>
-    <!--ul = Unorderd List, li = list item-->
      <ul id = "topNav">
        <li> <a href = "https://www.google.com">Find</a> </li>
        <li><a href = "https://www.ibo.org">Knowledge</a></li>
